# amuse

./: .clang-format  CMakeLists.txt  Doxyfile  LICENSE  README.md  _audio_group_8hpp_source.html  _audio_group_data_8hpp_source.html  _audio_group_pool_8hpp_source.html  _audio_group_project_8hpp_source.html  _audio_group_sample_directory_8hpp_source.html  _boo_backend_8hpp_source.html  _common_8hpp_source.html  _effect_base_8hpp_source.html  _effect_chorus_8hpp_source.html  _effect_delay_8hpp_source.html  _effect_reverb_8hpp_source.html  _emitter_8hpp_source.html  _engine_8hpp_source.html  _entity_8hpp_source.html  _envelope_8hpp_source.html  _i_backend_submix_8hpp_source.html  _i_backend_voice_8hpp_source.html  _i_backend_voice_allocator_8hpp_source.html  _listener_8hpp_source.html  _r_e_a_d_m_e_8md_source.html  _sequencer_8hpp_source.html  _song_state_8hpp_source.html  _sound_macro_state_8hpp_source.html  _submix_8hpp_source.html  _surround_profiles_8hpp_source.html  _voice_8hpp_source.html  amuse_8hpp_source.html  annotated.html  annotated_dup.js  classamuse_1_1_audio_group-members.html  classamuse_1_1_audio_group.html  classamuse_1_1_audio_group.js  classamuse_1_1_audio_group__coll__graph.map  classamuse_1_1_audio_group__coll__graph.md5  classamuse_1_1_audio_group_data-members.html  (+388 more)
AudioUnit/: Amuse.entitlements.in  AmuseContainer.entitlements.in  AmuseContainerMainMenu.xib  AmuseContainingApp.hpp  AmuseContainingApp.mm  AmuseExtension.entitlements.in  AudioGroupFilePresenter.hpp  AudioGroupFilePresenter.mm  AudioUnitBackend.hpp  AudioUnitBackend.mm  AudioUnitViewController.hpp  AudioUnitViewController.mm  AudioUnitViewController.xib  CMakeLists.txt  ContainerInfo.plist  ExtensionInfo.plist
Editor/: ADSREditor.cpp  ADSREditor.hpp  AudioGroupModel.cpp  AudioGroupModel.hpp  CMakeLists.txt  Common.cpp  Common.hpp  CurveEditor.cpp  CurveEditor.hpp  EditorWidget.cpp  EditorWidget.hpp  KeyboardWidget.cpp  KeyboardWidget.hpp  KeymapEditor.cpp  KeymapEditor.hpp  LayersEditor.cpp  LayersEditor.hpp  MIDIReader.cpp  MIDIReader.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NewSoundMacroDialog.cpp  NewSoundMacroDialog.hpp  ProjectModel.cpp  ProjectModel.hpp  ProjectStatistics.cpp  ProjectStatistics.hpp  SFXGroupEditor.cpp  SFXGroupEditor.hpp  SampleEditor.cpp  SampleEditor.hpp  SongGroupEditor.cpp  SongGroupEditor.hpp  SoundGroupEditor.cpp  SoundGroupEditor.hpp  SoundMacroEditor.cpp  SoundMacroEditor.hpp  StatusBarWidget.cpp  StatusBarWidget.hpp  (+3 more)
Editor/resources/: lang_de.ts  resources.qrc  translation_res.qrc
VST/: AudioGroupFilePresenter.cpp  AudioGroupFilePresenter.hpp  CMakeLists.txt  FileOpenDialog.cpp  FileOpenDialog.hpp  VSTBackend.cpp  VSTBackend.hpp  VSTEditor.cpp  VSTEditor.hpp
driver/: amuseconv.cpp  amuseplay.cpp  amuserender.cpp  main.cpp
include/: switch_math.hpp
include/amuse/: AudioGroup.hpp  AudioGroupData.hpp  AudioGroupPool.hpp  AudioGroupProject.hpp  AudioGroupSampleDirectory.hpp  BooBackend.hpp  Common.hpp  ContainerRegistry.hpp  DSPCodec.h  DSPCodec.hpp  DirectoryEnumerator.hpp  EffectBase.hpp  EffectChorus.hpp  EffectDelay.hpp  EffectReverb.hpp  EffectReverbHi.hpp  EffectReverbStd.hpp  Emitter.hpp  Engine.hpp  Entity.hpp  Envelope.hpp  IBackendSubmix.hpp  IBackendVoice.hpp  IBackendVoiceAllocator.hpp  Listener.hpp  N64MusyXCodec.h  N64MusyXCodec.hpp  Sequencer.hpp  SongConverter.hpp  SongState.hpp  SoundMacroState.hpp  Studio.hpp  Submix.hpp  SurroundProfiles.hpp  Voice.hpp  VolumeTable.hpp  amuse.hpp  dsp.h
lib/: AudioGroup.cpp  AudioGroupData.cpp  AudioGroupPool.cpp  AudioGroupProject.cpp  AudioGroupSampleDirectory.cpp  BooBackend.cpp  Common.cpp  ContainerRegistry.cpp  DSPCodec.c  DSPCodec.cpp  DirectoryEnumerator.cpp  EffectChorus.cpp  EffectDelay.cpp  EffectReverb.cpp  Emitter.cpp  Engine.cpp  Envelope.cpp  Listener.cpp  N64MusyXCodec.c  N64MusyXCodec.cpp  Sequencer.cpp  SongConverter.cpp  SongState.cpp  SoundMacroState.cpp  Studio.cpp  Submix.cpp  SurroundProfiles.cpp  Voice.cpp  VolumeLUT.c  VolumeLUT.cpp  VolumeTable.cpp  dsp.c
search/: all_0.js  all_10.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  search.css  searchdata.js  (+1 more)
